fix titleGrid and create search user in sql